<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.rahulfakir.theboldcircle.UserData.LoginActivity"
    android:background="@color/white">

    <ImageView
        android:src="@mipmap/watermark_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/imageView"
        android:scaleType="centerCrop"
        android:contentDescription=""
        tools:ignore="ContentDescription" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_header"
            android:id="@+id/textView"

            android:layout_centerHorizontal="true"
            android:textColor="@color/colorPrimary"
            android:textSize="25dp"
            android:layout_marginTop="15dp"
            tools:ignore="SpUsage" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/etEmail"
            android:layout_below="@+id/textView"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:background="@mipmap/edit_text_background"
            android:layout_marginTop="15dp"
            android:hint="@string/email_placeholder"
            android:text="rahul.fakir@gmail.com" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:id="@+id/etPassword"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:background="@mipmap/edit_text_background"
            android:hint="@string/password_placeholder"
            android:layout_below="@+id/etEmail"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:inputType="textPassword"
            android:text="Aa!0118021289" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etPassword"
            android:layout_alignLeft="@+id/etPassword"
            android:layout_alignStart="@+id/etPassword"
            android:layout_marginTop="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/persist_session"
                android:layout_marginLeft="5dp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                tools:ignore="RtlHardcoded" />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:id="@+id/cbxPersistSession" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/forgot_password"
            android:id="@+id/tvForgotPassword"
            android:layout_below="@+id/etPassword"
            android:layout_alignRight="@+id/etPassword"
            android:layout_alignEnd="@+id/etPassword"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:layout_marginRight="5dp"
            tools:ignore="RtlHardcoded" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/login_header"
            android:id="@+id/btnLogin"

            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_below="@+id/tvForgotPassword"
            android:layout_alignRight="@+id/tvForgotPassword"
            android:layout_alignEnd="@+id/etPassword"
            android:layout_alignLeft="@+id/etPassword"
            android:layout_alignStart="@+id/etPassword"
            android:layout_marginTop="15dp"
            android:background="@drawable/primary_color_button" />

        <ProgressBar
            android:id="@+id/pbLoginStatus"
            style="?android:attr/progressBarStyleLarge"
            android:layout_below="@id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:visibility="invisible" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/create_account_link"
            android:id="@+id/tvCreateProfile"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:clickable="false"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="25dp" />


    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
