<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_home_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.rahulfakir.theboldcircle.HomeScreenActivity"
    tools:showIn="@layout/app_bar_home_screen"
    android:background="@color/white">
    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/imageView"
        android:src="@mipmap/watermark_background"
        android:scaleType="centerCrop"
        android:contentDescription=""></ImageView>

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cvSpecials"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        card_view:cardCornerRadius="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/specials_placeholder"
                android:id="@+id/tvSpecials"

                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:id="@+id/ivSpecials"
                android:src="@mipmap/specials_icon"

                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:contentDescription="" />
        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cvStore"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        card_view:cardCornerRadius="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/cvSpecials">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/online_store_placeholder"
                android:id="@+id/tvStore"

                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:id="@+id/ivStore"
                android:src="@mipmap/shop_icon"

                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp" />
        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cvContact"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        card_view:cardCornerRadius="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/cvStore">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/call_us_placeholder"
                android:id="@+id/tvContact"

                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:id="@+id/ivContact"
                android:src="@mipmap/call_icon"

                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp" />
        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cvFindNearestStore"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        card_view:cardCornerRadius="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/cvContact">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/store_locator_placeholder"
                android:id="@+id/textView2"

                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:id="@+id/imageView2"
                android:src="@mipmap/directions_icon"

                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp" />
        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <ImageView
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:id="@+id/imageView3"

        android:src="@mipmap/company_logo"
        android:layout_below="@+id/cvFindNearestStore"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp" />


</RelativeLayout>
